--- a/backend/gleam.toml
+++ b/backend/gleam.toml
@@ -14,6 +14,12 @@ version = "1.0.0"
 
 [dependencies]
 gleam_stdlib = "~> 0.34 or ~> 1.0"
+wisp = "~> 0.14"
+gleam_json = "~> 1.0"
+gleam_erlang = "~> 0.25"
+mist = "~> 1.0"
+gleam_http = "~> 3.6"
+gleam_hackney = "~> 1.2"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
