--- a/backend/gleam.toml
+++ b/backend/gleam.toml
@@ -14,6 +14,14 @@ version = "1.0.0"
 
 [dependencies]
 gleam_stdlib = "~> 0.34 or ~> 1.0"
+mist = "~> 1.0"
+wisp = "~> 0.14"
+dot_env = "~> 0.5"
+envoy = "~> 1.0"
+gleam_erlang = "~> 0.25"
+birl = "~> 1.6"
+gleam_otp = "~> 0.10"
+shakespeare = "~> 0.1"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
