--- a/backend/gleam.toml
+++ b/backend/gleam.toml
@@ -22,6 +22,7 @@ gleam_erlang = "~> 0.25"
 birl = "~> 1.6"
 gleam_otp = "~> 0.10"
 shakespeare = "~> 0.1"
+glenvy = "~> 0.6"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
