--- a/backend/gleam.toml
+++ b/backend/gleam.toml
@@ -25,6 +25,8 @@ shakespeare = "~> 0.1"
 glenvy = "~> 0.6"
 gleam_hexpm = "~> 1.0"
 gleam_hackney = "~> 1.2"
+gleam_json = ">= 1.0.0 and < 2.0.0"
+gleam_http = ">= 3.6.0 and < 4.0.0"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
