--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,8 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@fontsource-variable/lexend": "^5.0.20",
+		"@fontsource/lexend": "^5.0.20",
 		"clsx": "^2.1.1",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1"
