--- a/backend/gleam.toml
+++ b/backend/gleam.toml
@@ -14,7 +14,6 @@ version = "1.0.0"
 
 [dependencies]
 gleam_stdlib = "~> 0.34 or ~> 1.0"
-mist = "~> 1.0"
 wisp = "~> 0.14"
 dot_env = "~> 0.5"
 envoy = "~> 1.0"
@@ -27,6 +26,7 @@ gleam_hexpm = "~> 1.0"
 gleam_hackney = "~> 1.2"
 gleam_json = ">= 1.0.0 and < 2.0.0"
 gleam_http = ">= 3.6.0 and < 4.0.0"
+mist = ">= 1.0.0 and < 2.0.0"
 
 [dev-dependencies]
 gleeunit = "~> 1.0"
