--- a/backend/gleam.toml
+++ b/backend/gleam.toml
@@ -19,7 +19,7 @@ dot_env = "~> 0.5"
 envoy = "~> 1.0"
 gleam_erlang = "~> 0.25"
 birl = "~> 1.6"
-gleam_otp = "~> 0.10"
+gleam_otp = ">= 0.10.0 and < 1.0.0"
 shakespeare = "~> 0.1"
 glenvy = "~> 0.6"
 gleam_hexpm = "~> 1.0"
