--- a/backend/gleam.toml
+++ b/backend/gleam.toml
@@ -1,4 +1,4 @@
-name = "app"
+name = "gleam_galaxy"
 version = "1.0.0"
 
 # Fill out these fields if you intend to generate HTML documentation or publish
@@ -11,6 +11,7 @@ version = "1.0.0"
 #
 # For a full reference of all the available options, you can have a look at
 # https://gleam.run/writing-gleam/gleam-toml/.
+
 
 [dependencies]
 gleam_stdlib = "~> 0.34 or ~> 1.0"
