--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,22 +1,22 @@
-# fly.toml app configuration file generated for backend-delicate-resonance-3055 on 2024-06-24T20:01:20-04:00
+# fly.toml app configuration file generated for gleam-galaxy on 2024-06-29T15:53:55-04:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'gleam_galaxy'
+app = 'gleam-galaxy'
 primary_region = 'iad'
 
 [build]
 
 [http_service]
-internal_port = 8080
-force_https = true
-auto_stop_machines = true
-auto_start_machines = true
-min_machines_running = 0
-processes = ['app']
+  internal_port = 8080
+  force_https = true
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
-memory = '1gb'
-cpu_kind = 'shared'
-cpus = 1
+  memory = '1gb'
+  cpu_kind = 'shared'
+  cpus = 1
