--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,7 +38,10 @@
 	"dependencies": {
 		"@fontsource-variable/lexend": "^5.0.20",
 		"@fontsource/lexend": "^5.0.20",
+		"bits-ui": "^0.21.12",
 		"clsx": "^2.1.1",
+		"cmdk-sv": "^0.0.18",
+		"lucide-svelte": "^0.407.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1"
 	}
