--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -16,6 +16,10 @@ auto_start_machines = true
 min_machines_running = 1
 processes = ['app']
 
+[services.concurrency]
+type = "requests"
+hard_limit = 25
+
 [[vm]]
 memory = "512mb"
 cpu_kind = 'shared'
