--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,8 @@
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
+		"@types/d3-format": "^3.0.4",
+		"@types/d3-quadtree": "^3.0.6",
 		"@types/eslint": "^8.56.0",
 		"@typescript-eslint/eslint-plugin": "^7.0.0",
 		"@typescript-eslint/parser": "^7.0.0",
@@ -41,6 +43,8 @@
 		"bits-ui": "^0.21.12",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.18",
+		"d3-quadtree": "^3.0.1",
+		"layercake": "^8.3.4",
 		"lucide-svelte": "^0.407.0",
 		"tailwind-merge": "^2.3.0",
 		"tailwind-variants": "^0.2.1"
