--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -11,7 +11,7 @@ primary_region = 'iad'
 [http_service]
 internal_port = 8080
 force_https = true
-auto_stop_machines = true
+auto_stop_machines = "off"
 auto_start_machines = true
 min_machines_running = 1
 processes = ['app']
@@ -21,6 +21,6 @@ type = "requests"
 hard_limit = 25
 
 [[vm]]
-memory = "512mb"
+memory = "256mb"
 cpu_kind = 'shared'
 cpus = 1
