--- a/frontend/package.json
+++ b/frontend/package.json
@@ -40,6 +40,7 @@
 	"dependencies": {
 		"@fontsource-variable/lexend": "^5.0.20",
 		"@fontsource/lexend": "^5.0.20",
+		"@sveltejs/adapter-cloudflare": "^4.7.2",
 		"bits-ui": "^0.21.13",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.18",
